--- a/src/app/dashboard/schedule/schedule.component.html
+++ b/src/app/dashboard/schedule/schedule.component.html
@@ -26,7 +26,7 @@
                 <div class="quick-info-title"></div>
                 <div class="duration-text"></div>
                 <button #ButtonInstance (click)="addToMySchedule(); onOpenDialog($event)"
-                        *ngIf="data.id && userRole !== 'ADMIN'"
+                        *ngIf="userRole && data.id && userRole !== 'ADMIN'"
                         class='e-lib e-flat e-primary dlgbtn mr-5'
                         ejs-button id='modalbtn'>
                   Add to my schedule
