--- a/src/app/dashboard/search/search.component.html
+++ b/src/app/dashboard/search/search.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col items-center justify-center py-4">
+<div class="flex flex-col sm:flex-row items-center justify-center py-4">
   <div class="p-5 bg-white rounded-xl shadow-md">
-    <div class="flex flex-col items-center space-y-5">
+    <div class="flex md:flex-col flex-row items-center space-x-5  md:space-x-0 md:space-y-5">
       <ejs-dropdownlist #typeList (change)="onChange1()" [(value)]="typeValue" [dataSource]="searchData"
                         [fields]="fields"
                         class="w-64"
